--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-todo",
   "version": "0.1.0",
+  "homepage": "https://vaishak101.github.io/vaishak-react-todo",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
@@ -14,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,5 +40,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
+  }
 }
