--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Vaishak'src Todo",
+  "short_name": "Vaishak' Todo",
   "name": "Vaishak's Todo App Built on React",
   "icons": [
     {
